# SRA-Assignments

./: README.md
LA/: row-echlon.py
embedded/: 8-bit memory.ms14  8-bit memory.ms14 (Security copy)  lone.c  readme.md  test.c  test.cpp
embedded/assigment2/: CMakeLists.txt  Makefile
embedded/assigment2/06/: CMakeLists.txt
embedded/assigment2/06/include/: library.h.gch  string_add.h.gch
embedded/assigment2/prize-Q/: test.c
embedded/assignment3/: Backup Of New Project.pdsbak  New Project.pdsprj
embedded/assignment3/sketch_oct22a/: sketch_oct22a.ino  sketch_oct22a.ino.standard.hex  sketch_oct22a.ino.with_bootloader.standard.hex
img_processing/: Untitled.ipynb  edge.py  imagerotate.py  imgrotat.py  kernels.py  masking.py  morphology.py  numpy.ipynb  roi.py  tp.py
img_processing/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  numpy-checkpoint.ipynb
